# exp2res

./: .gitignore  AGENTS.md  CLAUDE.md  DECISION-LOG.md  Makefile  README.md  SDD.md  demo.cast  pyproject.toml
demo/: transcript.txt
exp2res/: __init__.py  cli.py  config.py  errors.py
scripts/: check.py  check_acceptance_ledger.py  check_coverage_map.py  check_eval_cases.py  check_public_hygiene.py  demo.py
spec/: 00-change-from-v0-1.md  01-executive-summary.md  02-product-framing.md  03-core-purpose.md  04-goals-and-non-goals.md  05-core-principles.md  06-system-boundaries.md  07-high-level-architecture.md  08-runtime-architecture.md  09-domain-model.md  10-enumerations.md  11-pydantic-domain-models.md  12-sqlite-schema.md  13-pipeline-specification.md  14-cli-specification.md  15-llm-contracts.md  16-verification-rules.md  17-self-assessment-report-format.md  18-resume-export-rules.md  19-integration-contracts.md  20-suggested-repository-structure.md  21-evals-cases.toml  21-evals.md  22-implementation-plan.md  23-end-to-end-demo.md  24-acceptance-criteria.md  25-risks-and-mitigations.md  26-readme-positioning.md  27-key-invariants.md  28-final-design-statement.md  29-security-and-privacy.md  30-local-views.md
tests/: acceptance_ledger.toml  conftest.py  coverage_map.toml  export_helpers.py  fakes.py  test_adapter_conformance.py  test_canonical.py  test_capture_phase0.py  test_claude_adapter.py  test_cli_assess.py  test_cli_correction.py  test_cli_detections.py  test_cli_export_assessment.py  test_cli_extract.py  test_cli_logs_show.py  test_cli_phase0.py  test_cli_signals.py  test_deletion_phase0.py  test_demo.py  test_export_companions.py  test_llm_runner.py  (+18 more)
(+104 files in other folders)
